feat(custom): add image preloading
Добавил предзагрузку изображений для избежания прыжков интерфейса

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
   </head>
   <body class="body">
     <noscript>
-      <strong
-        >Приложение не работает с выключенным JavaScript. Включите JavaScript в
-        настройках Вашего браузера</strong
-      >
+      <strong>
+        Приложение не работает с выключенным JavaScript. Включите JavaScript в
+        настройках Вашего браузера
+      </strong>
     </noscript>
     <div id="app"></div>
   </body>
